[package]
name = "brc"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
hashbrown = "0.14.3"
memmap = "0.7.0"
rayon = "1.8.0"
num_cpus = "1.16.0"
argminmax = "0.6.1"
